feat(user): add /me endpoint
